# Personal-Financial-Intelligence-Operating-System

./: .env.example  .gitignore  .gitleaks.toml  README.md  alembic.ini  docker-compose.yml  package.json  playwright.config.ts  playwright.release.config.ts  pnpm-lock.yaml  pyproject.toml  repomix.config.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  delivery.yml  nightly-regression.yml  security.yml
adapters/: README.md  __init__.py
adapters/runtimes/: README.md  __init__.py  factory.py
alembic/: env.py
alembic/versions/: 407db90346a8_baseline.py
apps/api/: README.md
apps/web/: package.json  tsconfig.json
capabilities/: __init__.py  analyze.py  audits.py  boundary.py  dashboard.py  evals.py  reports.py  reviews.py  validation.py
capabilities/contracts/: __init__.py  diagnostic.py  domain.py  view.py  workflow.py
capabilities/diagnostic/: __init__.py  evals.py  validation.py
capabilities/domain/: __init__.py  finance_decisions.py  recommendations.py
capabilities/view/: __init__.py  audits.py  dashboard.py  reports.py
capabilities/workflow/: __init__.py  analyze.py  reviews.py
docs/: README.md  context_design.md  reasoning_contract.md
docs/architecture/: README.md  adapter-boundary-spec-v1.md  aegisos-next-batch-serial-modules-2026-04-22.md  aegisos-next-round-execution-plan.md  aegisos-phase-0-core-primitives-batch.md  aegisos-phase-1-core-load-bearing-batch.md  aegisos-post-mvp-refinement-execution-plan.md  aegisos-working-identity.md  architecture-baseline.md  core-primitives-spec-v1.md  overview.md  (+7 more)
execution/: __init__.py  catalog.py  registry.py
governance/: __init__.py  approval.py  approval_orm.py  approval_repository.py  decision.py  feedback.py  policy_source.py
infra/: monitoring.py
intelligence/: __init__.py  context_builder.py  engine.py  feedback.py
knowledge/: __init__.py  adapters.py  extraction.py  feedback.py  models.py  retrieval.py
orchestrator/: __init__.py
packs/: README.md
policies/: constitution.md  trading_limits.yaml
scripts/: check_schema_drift.sh  ci-quality-gates.sh  h9_dogfood_runs.py  run_db_migration.py  smoke_test_full_loop.py  smoke_test_outcome_loop.py  smoke_test_phase5.py  smoke_test_step_6.py
shared/: __init__.py
state/: __init__.py
(+450 files in other folders)
