[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pfios"
version = "0.1.0"
description = "Personal Financial Intelligence Operating System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "duckdb>=1.0.0",
  "duckdb-engine>=0.13.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "pytz"
]

[tool.setuptools.packages.find]
include = ["pfios*", "apps*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
