[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pfios"
version = "0.1.0"
description = "Personal Financial Intelligence Operating System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "duckdb>=1.0.0",
  "duckdb-engine>=0.13.0",
  "psycopg2-binary>=2.9.10",
  "alembic>=1.14.0",
  "redis",
  "httpx>=0.27.0",
  "opentelemetry-api>=1.38.0",
  "opentelemetry-exporter-otlp>=1.38.0",
  "opentelemetry-sdk>=1.38.0",
  "python-dotenv>=1.0.1",
  "sentry-sdk[fastapi]>=2.30.0",
  "pytz"
]

[project.optional-dependencies]
dev = [
  "bandit>=1.8.6",
  "pip-audit>=2.9.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.2.0",
  "ruff>=0.12.12",
]

[tool.setuptools.packages.find]
include = [
  "pfios*",
  "apps*",
  "capabilities*",
  "domains*",
  "execution*",
  "governance*",
  "infra*",
  "intelligence*",
  "orchestrator*",
  "packs*",
  "shared*",
  "state*",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
  "node_modules",
  ".next",
  "delivery-bundle",
]

[tool.ruff.lint]
select = [
  "E9",
  "F",
]

[tool.bandit]
exclude_dirs = [
  "./.venv",
  "./.direnv",
  "./node_modules",
  "./.git",
  "./__pycache__",
  "./.mypy_cache",
  "./.pytest_cache",
  "./.ruff_cache",
  "./apps/web/.next",
  "./build",
]
